force-app/main/default/objects/Change_Request__e/Change_Request__e.object-meta.xml
<CustomObject>
    <label>Change Request</label>
    <pluralLabel>Change Requests</pluralLabel>
</CustomObject>