force-app/main/default/objects/Change_Request__e/fields/AditionalInfo__c.field-meta.xml
<CustomField>
    <fullName>AditionalInfo__c</fullName>
    <description>This is used for the Partner Sync API intergration refer for more information, SGPRT 1010</description>
    <label>AditionalInfo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>