force-app/main/default/objects/Change_Request__e/fields/Counter__c.field-meta.xml
<CustomField>
    <fullName>Counter__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is used for the Partner Sync API intergration refer for more information, SGPRT 1010</description>
    <label>Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>