force-app/main/default/objects/Change_Request__e/fields/EntityId__c.field-meta.xml
<CustomField>
    <fullName>EntityId__c</fullName>
    <description>GUID of customer, SGPRT 1010</description>
    <label>Entity Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>