force-app/main/default/objects/Change_Request__e/fields/EntityType__c.field-meta.xml
<CustomField>
    <fullName>EntityType__c</fullName>
    <description>Customer type (for example: &quot;CLIENT_SAP&quot;), SGPRT 1010</description>
    <label>Entity Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>