force-app/main/default/objects/Change_Request__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>This is used for the Partner Sync API intergration refer for more information, SGPRT 1010</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>